# diesel_async_migrations

./: Cargo.toml  README.md
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: embed_migrations.rs  lib.rs  migrations.rs
src/: lib.rs
