[package]
name = "diesel_async_migrations"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/Parkando/async_migrations"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }

diesel-async = { version = "0.3", features = [ "postgres" ] }
diesel = "2"
scoped-futures = "0.1.3"
tracing = "0.1.37"


[workspace]
members = [ "./macros" ]
