[package]
name = "diesel_async_migrations"
version = "0.12.0"
edition = "2021"
repository = "https://github.com/niroco/diesel_async_migrations"
license = "MIT"
documentation = "https://docs.rs/diesel_async_migrations"
readme = "README.md"
description = "migrations for diesel_async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_async_migrations_macros = { path = "./macros", version = "0.12" }

diesel-async = { version = "0.5" }
diesel = { version = "2", features = [ "postgres" ] }
scoped-futures = "0.1"
tracing = "0.1"


[workspace]
members = [ "./macros" ]
