[package]
name = "diesel_async_migrations_macros"
version = "0.12.0"
edition = "2021"
repository = "https://github.com/niroco/diesel_async_migrations"
license = "MIT"
documentation = "https://docs.rs/diesel_async_migrations"
description = "migrations for diesel_async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
quote = "1"
proc-macro2 = "1"
